Fixed: Invisible horizontal rules
Github uses images for horizontal rules, but this style doesn't include the image so the horizontal rule is not visible.

--- a/markdownpad-github.css
+++ b/markdownpad-github.css
@@ -215,16 +215,6 @@ blockquote>:last-child {
   margin-bottom: 0px;
 }
 
-/* HORIZONTAL RULES
-=============================================================================*/
-
-hr {
-  border: 0 none;
-  color: #ccc;
-  height: 4px;
-  padding: 0;
-}
-
 /* TABLES
 =============================================================================*/
 
